# pros-lvgl-sim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_lib.py  make&&run.py
firmware/: drivers.lib  drivers_win.lib  lvgl.lib  lvgl_win.lib
include/: lv_conf.h  lv_drv_conf.h  lv_ex_conf.h  main.hpp
include/lv_drivers/: win_drv.c
include/lv_drivers/display/: monitor.h
include/ncrapi/: ncrapi.hpp  robotSet.hpp
include/ncrapi/device/: motor.hpp
include/ncrapi/i18n/: chinese.hpp
include/ncrapi/robotParts/: chassis.hpp  generic.hpp
include/ncrapi/system/: logger.hpp  sysBase.hpp
include/ncrapi/units/: QAcceleration.hpp  QAngle.hpp  QAngularAcceleration.hpp  QAngularJerk.hpp  QAngularSpeed.hpp  QArea.hpp  QForce.hpp  QFrequency.hpp  QJerk.hpp  QLength.hpp  QMass.hpp  QPressure.hpp  QSpeed.hpp  QTime.hpp  QTorque.hpp  QVolume.hpp  RQuantity.hpp
include/ncrapi/userConfig/: no1.hpp
include/ncrapi/userDisplay/: userDisplay.hpp
include/ncrapi/util/: timer.hpp  util.hpp
include/pros/: adi.h  misc.h  rtos.h  rtos.hpp  vision.hpp
include/sim_test/: test_config.hpp
src/: autonomous.cpp  init.cpp  initialize.cpp  main.cpp  mouse_cursor_icon.c  opcontrol.cpp
src/ncrapi/device/: adi.cpp  imu.cpp  motor.cpp  vision.cpp
src/ncrapi/robotParts/: chassis.cpp  generic.cpp
src/ncrapi/system/: logger.cpp  sysBase.cpp
src/ncrapi/userDisplay/: action.cpp  logo.c  setConfig.cpp  userDisplay.cpp
src/ncrapi/util/: timer.cpp
src/sim_test/: adi.cpp  imu.cpp  misc.cpp  motors.cpp  rtos.cpp  test_config.cpp  vision.cpp
(+6 files in other folders)
